chore: require at least snapd2.68 due to components support
  https://snapcraft.io/docs/components mentions that components requires snapd 2.67+

Signed-off-by: Lincoln Wallace <lincoln.wallace@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -9,6 +9,11 @@ description: |
 grade: devel
 confinement: strict
 
+# According to https://snapcraft.io/docs/components
+# Components requires snapd 2.67+
+assumes:
+  - snapd2.68
+
 compression: lzo
 
 environment:
