chore: require at least snapd2.68 due to components support (#30)
Signed-off-by: Lincoln Wallace <lincoln.wallace@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -9,6 +9,9 @@ description: |
 grade: devel
 confinement: strict
 
+assumes:
+  - snapd2.68 # for components support
+
 compression: lzo
 
 environment:
