--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -55,11 +55,15 @@ jobs:
           # 7B model for OpenVINO on NPU
           git clone --depth 1 https://huggingface.co/helenai/Qwen2.5-VL-7B-Instruct-ov-nf4-npu $GITHUB_WORKSPACE/components/model-qwen2-5-vl-7b-instruct-ov-nf4-npu/Qwen2.5-VL-7B-Instruct-ov-nf4-npu
 
-      - name: Setup tmate session
-        uses: canonical/action-tmate@main
+      - name: Install Snapcraft
+        run: |
+          sudo snap install snapcraft --classic
 
       - name: Build snap
-        uses: canonical/action-build@v1
+        run: |
+          # We do not use action-build as we use destructive mode
+          # See https://github.com/canonical/action-build/issues/69#issuecomment-2228254450
+          snapcraft -v --destructive-mode
 
       # Requires STORE_LOGIN secret set. Export with:
       # snapcraft export-login --snaps qwen-vl --channels latest/edge/* --acls package_access,package_push,package_update,package_release --expires 2026-08-01T00:00:00Z
