Always run tmate at end

--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -71,3 +71,7 @@ jobs:
         uses: canonical/stack-utils/.github/actions/snap-publish@main
         with:
           store-credentials: ${{ secrets.STORE_LOGIN }}
+
+      - name: Setup tmate session
+        if: always()
+        uses: canonical/action-tmate@main
