--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -52,8 +52,10 @@ jobs:
           curl -L https://huggingface.co/ggml-org/Qwen2.5-VL-7B-Instruct-GGUF/resolve/main/Qwen2.5-VL-7B-Instruct-Q4_K_M.gguf --output $GITHUB_WORKSPACE/components/model-qwen2-5-vl-7b-instruct-q4-k-m/Qwen2.5-VL-7B-Instruct-Q4_K_M.gguf
           # 7B model for OpenVINO on CPU or GPU
           git clone --depth 1 https://huggingface.co/helenai/Qwen2.5-VL-7B-Instruct-ov-int4 $GITHUB_WORKSPACE/components/model-qwen2-5-vl-7b-instruct-ov-int4/Qwen2.5-VL-7B-Instruct-ov-int4
+          rm -rf $GITHUB_WORKSPACE/components/model-qwen2-5-vl-7b-instruct-ov-int4/Qwen2.5-VL-7B-Instruct-ov-int4/.git
           # 7B model for OpenVINO on NPU
           git clone --depth 1 https://huggingface.co/helenai/Qwen2.5-VL-7B-Instruct-ov-nf4-npu $GITHUB_WORKSPACE/components/model-qwen2-5-vl-7b-instruct-ov-nf4-npu/Qwen2.5-VL-7B-Instruct-ov-nf4-npu
+          rm -rf $GITHUB_WORKSPACE/components/model-qwen2-5-vl-7b-instruct-ov-nf4-npu/Qwen2.5-VL-7B-Instruct-ov-nf4-npu/.git
 
       - name: Build snap
         uses: canonical/action-build@v1
