--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -1,14 +1,15 @@
 name: Snap CI
+on: [push]
 
-on:
-  pull_request:
-    branches: [ main ]
-    types:
-      - ready_for_review
-  push:
-    branches: [ main ]
-  # Allow manual trigger
-  workflow_dispatch:
+#on:
+#  pull_request:
+#    branches: [ main ]
+#    types:
+#      - ready_for_review
+#  push:
+#    branches: [ main ]
+#  # Allow manual trigger
+#  workflow_dispatch:
 
 env:
   SNAP_NAME: qwen-vl
@@ -64,3 +65,7 @@ jobs:
         uses: canonical/stack-utils/.github/actions/snap-publish@main
         with:
           store-credentials: ${{ secrets.STORE_LOGIN }}
+
+      - name: Setup tmate session
+        if: always()
+        uses: canonical/action-tmate@main
