--- a/.github/workflows/verify-engines.yaml
+++ b/.github/workflows/verify-engines.yaml
@@ -23,5 +23,4 @@ jobs:
 
       - name: Run validation
         run: |
-          cd stack-utils/cmd/stack
-          go run . debug validate-engines ../../../engines/**/*.yaml
+          go run ./cmd/cli debug validate-engines ../../../engines/**/*.yaml
