--- a/.github/workflows/verify-engines.yaml
+++ b/.github/workflows/verify-engines.yaml
@@ -23,4 +23,5 @@ jobs:
 
       - name: Run validation
         run: |
-          go run ./cmd/cli debug validate-engines ../../../engines/**/*.yaml
+          cd stack-utils/cmd/cli
+          go run . debug validate-engines ../../../engines/**/*.yaml
