--- a/.github/workflows/verify-engines.yaml
+++ b/.github/workflows/verify-engines.yaml
@@ -23,5 +23,5 @@ jobs:
 
       - name: Run validation
         run: |
-          cd stack-utils/cmd/stack
+          cd stack-utils/cmd/cli
           go run . debug validate-engines ../../../engines/**/*.yaml
