--- a/engines/intel-cpu/engine.yaml
+++ b/engines/intel-cpu/engine.yaml
@@ -15,6 +15,6 @@ components:
   - &m model-qwen2-5-vl-7b-instruct-ov-int4
 configurations:
   server: *s
-  model.source: *m
+  model: *m
   target-device: CPU
   http.base-path: v3
