--- a/engines/intel-npu/engine.yaml
+++ b/engines/intel-npu/engine.yaml
@@ -23,6 +23,6 @@ components:
   - &m model-qwen2-5-vl-7b-instruct-ov-nf4-npu
 configurations:
   server: *s
-  model.source: *m
+  model: *m
   target-device: NPU
   http.base-path: v3
