--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -67,8 +67,8 @@ parts:
     organize:
       "*": engines/
 
-  stack-utils:
-    source: stack-utils
+  cli:
+    source: cli # this is a private git submodule which must be cloned separately
     plugin: go
     build-snaps:
       - go/1.24/stable
