Change path to CLI in verification workflow

--- a/.github/workflows/verify-engines.yaml
+++ b/.github/workflows/verify-engines.yaml
@@ -23,5 +23,5 @@ jobs:
 
       - name: Run validation
         run: |
-          cd stack-utils/cmd/cli
+          cd cli/cmd/cli
           go run . debug validate-engines ../../../engines/**/*.yaml
