--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -193,6 +193,18 @@ parts:
     organize:
       "*": (component/mmproj-qwen2-5-vl-7b-instruct-q8-0)
 
+  model-qwen2-5-vl-3b-instruct-aio-q8r16:
+    source: components/model-qwen2-5-vl-3b-instruct-aio-q8r16
+    plugin: dump
+    organize:
+      "*": (component/model-qwen2-5-vl-3b-instruct-aio-q8r16)
+
+  mmproj-qwen2-5-vl-3b-instruct-aio-q8-0:
+    source: components/mmproj-qwen2-5-vl-3b-instruct-aio-q8-0
+    plugin: dump
+    organize:
+      "*": (component/mmproj-qwen2-5-vl-3b-instruct-aio-q8-0)
+
   model-qwen2-5-vl-3b-instruct-ov-int4:
     source: components/model-qwen2-5-vl-3b-instruct-ov-int4
     plugin: dump
@@ -346,6 +358,18 @@ components:
     type: standard
     summary: MMProj Qwen 2.5 VL 7B
     description: Multimodal projector for Qwen 2.5 VL 7B
+    version: *snap-version
+
+  model-qwen2-5-vl-3b-instruct-aio-q8r16:
+    type: standard
+    summary: Qwen 2.5 VL 3B Q8_0 for Ampere CPUs
+    description: Quantized model with 3B parameters in gguf format with Q8R16 weight encoding
+    version: *snap-version
+
+  mmproj-qwen2-5-vl-3b-instruct-aio-q8-0:
+    type: standard
+    summary: MMProj Qwen 2.5 VL 3B Q8_0 for Ampere CPUs
+    description: Multimodal projector for Qwen 2.5 VL 3B with Q8_0 weight encoding
     version: *snap-version
 
   model-qwen2-5-vl-3b-instruct-ov-int4:
