Set specific track

--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -66,8 +66,9 @@ jobs:
         uses: canonical/action-build@v1
 
       # Requires STORE_LOGIN secret set. Export with:
-      # snapcraft export-login --snaps qwen-vl --channels latest/edge/* --acls package_access,package_push,package_update,package_release --expires 2026-08-01T00:00:00Z
+      # snapcraft export-login --snaps qwen-vl --channels */edge/* --acls package_access,package_push,package_update,package_release --expires 2026-08-01T00:00:00Z <file>
       - name: Publish snap
-        uses: canonical/famous-models-dev/actions/publish@main
+        uses: canonical/famous-models-dev/actions/publish@action-custom-track
         with:
           store-credentials: ${{ secrets.STORE_LOGIN }}
+          snap-track: "2.5"
