Change build workflow to trigger with a label (#56)

--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -1,21 +1,45 @@
 name: Snap CI
 
 on:
-  pull_request:
-    branches: [ main ]
-    types:
-      - ready_for_review
+  pull_request_target:
+    types: [ labeled ]
+  
   push:
     branches: [ main ]
+
   # Allow manual trigger
   workflow_dispatch:
 
-env:
-  SNAP_NAME: qwen-vl
 
 jobs:
+  trigger:
+    name: Comment and trigger build
+    if: github.event_name == 'push' || 
+      (github.event_name == 'pull_request_target' && github.event.label.name == 'needs-build') 
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write # needed to comment on PR
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+
+      - name: Comment on the PR
+        if: github.event_name == 'pull_request_target'
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          RUN_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          
+          COMMIT_SHA="${{ github.event.pull_request.head.sha }}"
+          COMMIT_URL="${{ github.server_url }}/${{ github.repository }}/commit/$COMMIT_SHA"
+          PR_NUMBER=${{ github.event.pull_request.number }}
+          
+          gh pr comment $PR_NUMBER --body "Snap build: [workflow run]($RUN_URL) | $COMMIT_URL"
+
   build:
-    name: Build
+    name: Build and publish snap
+    needs: [trigger]
     strategy:
       fail-fast: false
       matrix:
@@ -72,3 +96,22 @@ jobs:
         with:
           store-credentials: ${{ secrets.STORE_LOGIN }}
           snap-track: "2.5"
+
+  clean:
+    name: Remove label
+    needs: [trigger, build]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write # needed to remove the label
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+        
+      - name: Remove 'needs-build' label
+        if: github.event_name == 'pull_request_target'
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          PR_NUMBER=${{ github.event.pull_request.number }}
+          gh pr edit $PR_NUMBER --remove-label "needs-build"
