feat: use allof and anyof terminology on engine manifests
Signed-off-by: Lincoln Wallace <lincoln.wallace@canonical.com>

--- a/engines/ampere-altra/engine.yaml
+++ b/engines/ampere-altra/engine.yaml
@@ -3,7 +3,7 @@ description: Optimized for Ampere Altra CPUs
 vendor: Ampere Computing
 grade: stable
 devices:
-  all:
+  allof:
     - type: cpu
       architecture: arm64
       implementer-id: 0x41 # Arm Limited.
