--- a/engines/cuda/engine.yaml
+++ b/engines/cuda/engine.yaml
@@ -3,7 +3,7 @@ description: Use Nvidia GPUs via CUDA
 vendor: Canonical Ltd
 grade: stable
 devices:
-  all:
+  allof:
     - type: cpu
       architecture: amd64
       flags: [sse4_2, f16c, fma, avx, avx2]
