--- a/engines/intel-npu/engine.yaml
+++ b/engines/intel-npu/engine.yaml
@@ -10,11 +10,13 @@ devices:
     # Lunar Lake NPU
     - type: npu
       vendor-id: 0x8086 # Intel Corporation
-      device-id: 0x643e 
+      device-id: 0x643e
+      snap-connections: [ intel-npu, npu-libs ]
     # Meteor Lake NPU
     - type: npu
       vendor-id: 0x8086
       device-id: 0x7d1d
+      snap-connections: [ intel-npu, npu-libs ]
 
 memory: 4G
 disk-space: 8G
