chore: update submodules name
Signed-off-by: Lincoln Wallace <lincoln.wallace@canonical.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "stack-utils"]
+[submodule "inference-snaps-cli"]
 	path = cli
 	url = https://github.com/canonical/inference-snaps-cli.git
-[submodule "famous-models-dev"]
+[submodule "inference-snaps-dev"]
 	path = dev
 	url = https://github.com/canonical/inference-snaps-dev.git
