feat: setup content iface to provide connection.json
Signed-off-by: Lincoln Wallace <lincoln.wallace@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -43,7 +43,14 @@ plugs:
   # To allow sideloading models by root
   home:
     read: all
-    
+
+slots:
+  socket-provider:
+    interface: content
+    source:
+      read:
+       - $SNAP_DATA/share
+
 hooks:
   install:
     environment:
