refact: generate endpoints.json on $SNAP_DATA/share
Signed-off-by: Lincoln Wallace <lincoln.wallace@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -49,7 +49,7 @@ slots:
     interface: content
     source:
       read:
-       - $SNAP/../../../tmp/share
+       - $SNAP_DATA/share
 
 hooks:
   install:
