--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -45,11 +45,11 @@ plugs:
     read: all
 
 slots:
-  socket-provider:
+  inference-endpoints:
     interface: content
     source:
       read:
-       - $SNAP_DATA/share
+       - $SNAP_DATA/share/endpoints
 
 hooks:
   install:
