Add kmod interface

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -52,6 +52,7 @@ hooks:
     plugs:
       # For hardware detection
       - hardware-observe
+      - kernel-module-observe
       - opengl
 
 parts:
@@ -390,8 +391,9 @@ apps:
     completer: bin/completion.bash
     plugs:
       # For hardware detection
-      - opengl
       - hardware-observe
+      - kernel-module-observe
+      - opengl
       # To access server over network socket
       - network
     environment:
