Add ovms license to snap (#91)

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -292,6 +292,15 @@ parts:
       - curl
       - libpython3.12
 
+  openvino-model-server-license:
+    plugin: dump
+    source: https://github.com/openvinotoolkit/model_server.git
+    source-depth: 1
+    override-build: |
+      license_dir=$CRAFT_PART_INSTALL/usr/share/doc/openvino-model-server/
+      mkdir -p $license_dir
+      cp LICENSE $license_dir
+
   openvino-model-server-python-dependencies:
     plugin: python
     source: components/openvino-model-server
