Set nvidia-utils version to 580

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -74,7 +74,7 @@ parts:
       - go/1.24/stable
     stage-packages:
       - pciutils
-      - nvidia-utils # for Nvidia vRAM and Cuda Capability detection
+      - nvidia-utils-580 # for Nvidia vRAM and Cuda Capability detection
       - clinfo # for Intel GPU vRAM detection
     organize:
       bin/cli: bin/qwen-vl
